# pr_xatlas

./: CMakeLists.txt
.github/: pragma_module_info.json
include/: pr_xatlas.hpp
src/: module.cpp  pr_xatlas.cpp
